<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/regiest_login_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_user_phone"
                    android:inputType="textPhonetic"
                    android:hint="@string/et_user_phone"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    />
            </android.support.design.widget.TextInputLayout>
            <RelativeLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    style="?android:textAppearanceSmall"
                    android:id="@+id/bn_login"
                    android:text="@string/bn_login"
                    android:layout_width="88dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    />
                <Button
                    android:text="@string/bn_regiest"
                    style="?android:textAppearanceSmall"
                    android:id="@+id/bn_regiest"
                    android:layout_width="88dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="50dp"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>