<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="8.2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="horizontal"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/id_switch_tab_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >

        <LinearLayout
            android:id="@+id/ll_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_message"
                android:src="@drawable/message"
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tv_message"
                android:layout_weight="1.8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tab_message"
                android:textSize="10sp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/colorMainStyle"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_contacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_contacts"
                android:src="@drawable/user"
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tv_contacts"
                android:layout_weight="1.8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tab_user"
                android:textSize="10sp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/colorMainStyle"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/iv_home"
                android:src="@drawable/home"
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tv_home"
                android:layout_weight="1.8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tab_share"
                android:textSize="10sp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/colorMainStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/ll_agreement"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_agreement"
                android:src="@drawable/agreement"
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tv_agreement"
                android:layout_weight="1.8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tab_agreement"
                android:textSize="10sp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/colorMainStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_setting"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_setting"
                android:src="@drawable/setting"
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_setting"
                android:layout_weight="1.8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tab_setting"
                android:textSize="10sp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/colorMainStyle"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

</LinearLayout>